Add methods for adding and removing referencing objects to given entity