@@ -3,8 +3,8 @@ package com.example.classroom.service;
 import com.example.classroom.dto.DepartmentDto;
 import com.example.classroom.entity.Department;
 import com.example.classroom.entity.FieldOfStudy;
-import com.example.classroom.entity.Teacher;
 import com.example.classroom.repository.DepartmentRepository;
+import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -16,22 +16,18 @@ import javax.transaction.Transactional;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 @Service
+@RequiredArgsConstructor
 public class DepartmentService {
     private final DepartmentRepository repository;
     private final ModelMapper mapper;
 
-    public DepartmentService(DepartmentRepository repository, ModelMapper mapper) {
-        this.repository = repository;
-        this.mapper = mapper;
-    }
-
     @Transactional
     public DepartmentDto create(DepartmentDto dto) {
         Department department = mapper.map(dto, Department.class);
-        addDeanAndFieldsOfStudy(department);
+        addReferencingObjects(department);
         Department saved = repository.save(department);
         return mapper.map(saved, DepartmentDto.class);
     }
@@ -40,9 +36,9 @@ public class DepartmentService {
     public DepartmentDto update(DepartmentDto dto) {
         Department department = repository.findById(dto.getId())
                 .orElseThrow(() -> new IllegalArgumentException("Invalid department '" + dto + "' with ID: " + dto.getId()));
-        removeDeanAndFieldsOfStudy(department);
+        removeReferencingObjects(department);
         mapper.map(dto, department);
-        addDeanAndFieldsOfStudy(department);
+        addReferencingObjects(department);
         Department saved = repository.save(department);
         return mapper.map(saved, DepartmentDto.class);
 
@@ -50,7 +46,7 @@ public class DepartmentService {
 
     public List<DepartmentDto> fetchAll() {
         List<Department> departments = repository.findAll();
-        return departments.stream().map(department -> mapper.map(department, DepartmentDto.class)).collect(Collectors.toList());
+        return departments.stream().map(department -> mapper.map(department, DepartmentDto.class)).toList();
     }
 
     public Page<DepartmentDto> fetchAllPaginated(int pageNo, int pageSize, String sortField, String sortDirection) {
@@ -73,13 +69,19 @@ public class DepartmentService {
     public void remove(Long id) {
         Department department = repository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Invalid department id: " + id));
-        removeDeanAndFieldsOfStudy(department);
+        removeReferencingObjects(department);
         repository.delete(department);
+    }
+
+    @Transactional
+    public void removeAll() {
+        repository.findAll().forEach(this::removeReferencingObjects);
+        repository.deleteAll();
     }
 
     public List<DepartmentDto> findByName(String searched) {
         List<Department> found = repository.findAllByNameContainingIgnoreCase(searched);
-        return found.stream().map(s -> mapper.map(s, DepartmentDto.class)).collect(Collectors.toList());
+        return found.stream().map(s -> mapper.map(s, DepartmentDto.class)).toList();
     }
 
     public Page<DepartmentDto> findByNamePaginated(int pageNo, int pageSize, String sortField, String sortDirection, String searched) {
@@ -91,32 +93,15 @@ public class DepartmentService {
         return all.map(department -> mapper.map(department, DepartmentDto.class));
     }
 
-    private void addDeanAndFieldsOfStudy(Department department) {
-        Teacher dean = department.getDean();
-        HashSet<FieldOfStudy> fieldsOfStudy = new HashSet<>(department.getFieldsOfStudy());
-        if (!fieldsOfStudy.isEmpty()) {
-            fieldsOfStudy.forEach(department::addFieldOfStudy);
-        }
-        if (dean != null) {
-            department.setDean(dean);
-            dean.setDepartmentDean(department);
-        }
+    private void addReferencingObjects(Department department) {
+        Set<FieldOfStudy> fieldsOfStudy = new HashSet<>(department.getFieldsOfStudy());
+        department.setDean(department.getDean());
+        fieldsOfStudy.forEach(department::addFieldOfStudy);
     }
 
-    private void removeDeanAndFieldsOfStudy(Department department) {
-        Teacher dean = department.getDean();
-        HashSet<FieldOfStudy> fieldsOfStudy = new HashSet<>(department.getFieldsOfStudy());
-        if (!fieldsOfStudy.isEmpty()) {
-            fieldsOfStudy.forEach(department::removeFieldOfStudy);
-        }
-        if (dean != null) {
-            department.setDean(null);
-            dean.setDepartmentDean(null);
-        }
-    }
-
-    @Transactional
-    public void removeAll() {
-        repository.deleteAll();
+    private void removeReferencingObjects(Department department) {
+        Set<FieldOfStudy> fieldsOfStudy = new HashSet<>(department.getFieldsOfStudy());
+        department.setDean(null);
+        fieldsOfStudy.forEach(department::removeFieldOfStudy);
     }
 }
