@@ -4,7 +4,7 @@ import com.example.classroom.dto.StudentDto;
 import com.example.classroom.entity.Student;
 import com.example.classroom.entity.Teacher;
 import com.example.classroom.repository.StudentRepository;
-import com.example.classroom.repository.TeacherRepository;
+import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -17,43 +17,36 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class StudentService {
-    private final StudentRepository studentRepository;
-    private final TeacherRepository teacherRepository;
+    private final StudentRepository repository;
     private final ModelMapper mapper;
-
-    public StudentService(StudentRepository studentRepository, TeacherRepository teacherRepository, ModelMapper mapper) {
-        this.studentRepository = studentRepository;
-        this.teacherRepository = teacherRepository;
-        this.mapper = mapper;
-    }
 
     @Transactional
     public StudentDto create(StudentDto dto) {
         Student student = mapper.map(dto, Student.class);
-        assignTeachers(student, student.getTeachers());
-        Student saved = studentRepository.save(student);
+        addReferencingObjects(student);
+        Student saved = repository.save(student);
         return mapper.map(saved, StudentDto.class);
     }
 
     @Transactional
     public StudentDto update(StudentDto dto) {
-        Student student = studentRepository.findById(dto.getId())
+        Student student = repository.findById(dto.getId())
                 .orElseThrow(() -> new IllegalArgumentException("Invalid student '" + dto + "' with ID: " + dto.getId()));
-        removeTeachers(student, new HashSet<>(student.getTeachers()));
+        removeReferencingObjects(student);
         mapper.map(dto, student);
-        assignTeachers(student, student.getTeachers());
-        Student saved = studentRepository.save(student);
+        addReferencingObjects(student);
+        Student saved = repository.save(student);
         return mapper.map(saved, StudentDto.class);
 
     }
 
     public List<StudentDto> fetchAll() {
-        List<Student> all = studentRepository.findAll();
-        return all.stream().map(student -> mapper.map(student, StudentDto.class)).collect(Collectors.toList());
+        List<Student> all = repository.findAll();
+        return all.stream().map(student -> mapper.map(student, StudentDto.class)).toList();
     }
 
     public Page<StudentDto> fetchAllPaginated(int pageNo, int pageSize, String sortField, String sortDirection) {
@@ -62,28 +55,34 @@ public class StudentService {
                 Sort.by(sortField).descending();
 
         Pageable pageable = PageRequest.of(pageNo - 1, pageSize, sort);
-        Page<Student> all = studentRepository.findAll(pageable);
+        Page<Student> all = repository.findAll(pageable);
         return all.map(student -> mapper.map(student, StudentDto.class));
     }
 
 
     public StudentDto fetchById(Long id) {
-        Optional<Student> byId = studentRepository.findById(id);
+        Optional<Student> byId = repository.findById(id);
         return byId.map(student -> mapper.map(student, StudentDto.class))
                 .orElseThrow(() -> new IllegalArgumentException("Invalid student id: " + id));
     }
 
     @Transactional
     public void remove(Long id) {
-        Student student = studentRepository.findById(id)
+        Student student = repository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Invalid student id: " + id));
-        removeTeachers(student, new HashSet<>(student.getTeachers()));
-        studentRepository.delete(student);
+        removeReferencingObjects(student);
+        repository.delete(student);
+    }
+
+    @Transactional
+    public void removeAll() {
+        repository.findAll().forEach(this::removeReferencingObjects);
+        repository.deleteAll();
     }
 
     public List<StudentDto> findByFirstOrLastName(String searched) {
-        List<Student> found = studentRepository.findAllByFirstNameContainingIgnoreCaseOrLastNameContainingIgnoreCase(searched);
-        return found.stream().map(s -> mapper.map(s, StudentDto.class)).collect(Collectors.toList());
+        List<Student> found = repository.findAllByFirstNameContainingIgnoreCaseOrLastNameContainingIgnoreCase(searched);
+        return found.stream().map(s -> mapper.map(s, StudentDto.class)).toList();
     }
 
     public Page<StudentDto> findByFirstOrLastNamePaginated(int pageNo, int pageSize, String sortField, String sortDirection, String searched) {
@@ -92,32 +91,19 @@ public class StudentService {
                 Sort.by(sortField).descending();
 
         Pageable pageable = PageRequest.of(pageNo - 1, pageSize, sort);
-        Page<Student> all = studentRepository.findAllByFirstNameContainingIgnoreCaseOrLastNameContainingIgnoreCase(searched, pageable);
+        Page<Student> all = repository.findAllByFirstNameContainingIgnoreCaseOrLastNameContainingIgnoreCase(searched, pageable);
         return all.map(student -> mapper.map(student, StudentDto.class));
     }
 
-    @Transactional
-    public void assignTeachers(Student student, Set<Teacher> teachers) {
-        if (teachers != null && !teachers.isEmpty()) {
-            teachers.forEach(student::addTeacher);
-            studentRepository.save(student);
-        }
+    private void addReferencingObjects(Student student) {
+        student.setFieldOfStudy(student.getFieldOfStudy());
+        Set<Teacher> teachers = new HashSet<>(student.getTeachers());
+        teachers.forEach(student::addTeacher);
     }
 
-    @Transactional
-    public void removeTeachers(Student student, Set<Teacher> teachers) {
-        if (teachers != null && !teachers.isEmpty()) {
-            teachers.forEach(student::removeTeacher);
-            teacherRepository.saveAll(teachers);
-            studentRepository.save(student);
-        }
-    }
-
-    @Transactional
-    public void removeAll() {
-        for (Student student : studentRepository.findAll()){
-            teacherRepository.findAll().forEach(t -> t.removeStudent(student));
-        }
-        studentRepository.deleteAll();
+    private void removeReferencingObjects(Student student) {
+        student.setFieldOfStudy(null);
+        Set<Teacher> teachers = new HashSet<>(student.getTeachers());
+        teachers.forEach(student::removeTeacher);
     }
 }
